--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-name: Npm Publish
+name: Node.js Package
 
 on:
   release:
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: 'npm'
+      - run: npm install -g npm@7
       - run: npm ci --ignore-scripts
       - run: npm test
 
@@ -23,7 +25,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: 'npm'
           registry-url: https://registry.npmjs.org/
+      - run: npm install -g npm@7
       - run: npm ci --ignore-scripts
       - run: npm publish
         env:
