--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon test/index.js"
+        "dev": "nodemon docs/example/index.js"
     },
     "dependencies": {
         "@outwalk/discord-backup": "^0.7.2"
