--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Aoi.backup - Easily manage discord server backups in Aoi.js",
     "main": "src/index.js",
     "scripts": {
-        "start": "node src/index.js",
+        "start": "node src/index.js"
     },
     "dependencies": {
         "@outwalk/discord-backup": "^0.7.2"
